usecase-1/routes/api-example-com-root-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com-root-route
  namespace: kgateway-system
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
  hostnames:
    - "api.example.com"
  rules:
  - matches:  
    - path:
        type: PathPrefix
        value: /httpbin/v1.0/
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    # Delegate to another HTTPRoute
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httpbin-apiproduct
      namespace: kgateway-system
